--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -19,14 +19,14 @@
           <ul class="popover" id="locations-ul">
 	    <li><h2>Arizona:</h2>
 	      <ul>
-                <li>Phoenix</li>
-                <li>Tucson</li>
+                <li>Page</li>
+                <li>Page2</li>
 	      </ul>
 	    </li>
 	    <li><h2>California:</h2>
 	      <ul>
-                <li>Oakland</li>
                 <li>San Francisco</li>
+                <li>Los Altos</li>
 	      </ul>
 	    </li>
 	  </ul>
