--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
     <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
-    <link rel="stylesheet" type="text/css" href="styles/7-places.css">
+    <link rel="stylesheet" type="text/css" href="styles/8-places.css">
     <link rel="icon" type="image/png" href="images/icon.png">
   </head>
   <body>
@@ -15,22 +15,22 @@
     <div class="container">
       <section class="filters">
         <div class="locations">
-          <h3>States</h3>
+	  <h3>States</h3>
           <h4>California, Arizona...</h4>
           <ul class="popover" id="locations-ul">
-            <li><h2>Arizona:</h2>
-              <ul>
+	    <li><h2>Arizona:</h2>
+	      <ul>
                 <li>Page</li>
                 <li>Page2</li>
-              </ul>
-            </li>
-            <li><h2>California:</h2>
-              <ul>
-                <li>San Francisco</li>
+	      </ul>
+	    </li>
+	    <li><h2>California:</h2>
+	      <ul>
+                <li>San Franscisco</li>
                 <li>Los Altos</li>
-              </ul>
-            </li>
-          </ul>
+	      </ul>
+	    </li>
+	  </ul>
         </div>
         <div class="amenities">
           <h3>Amenities</h3>
@@ -45,4 +45,87 @@
         <button type="button">Search</button>
       </section>
       <section class="places">
-
+        <h1>Places</h1>
+        <article>
+          <h2>My home</h2>
+          <div class="price_by_night"><p>$80</p></div>
+          <div class="information">
+            <div class="max_guest">
+              <p>2 Guests</p>
+            </div>
+            <div class="number_rooms">
+              <p>1 Bedroom</p>
+            </div>
+            <div class="number_bathrooms">
+              <p>1 Bathroom</p>
+            </div>
+          </div>
+          <div class="user">
+            <strong>Owner:</strong> John Lennon
+          </div>
+          <div class="description">
+            <p>
+              This is a lovely 1 bedroom and 1 bathroom apartment
+              that can accommodate 2 people. It's located at the center
+              of Shanghai and next to the subway line 1.1 stop to People Square, 2 stops
+	      to Bund, 3 stops to Jingan Temple.
+            </p>
+          </div>
+        </article>
+        <article>
+          <h2>Tiny house</h2>
+          <div class="price_by_night"><p>$65</p></div>
+          <div class="information">
+            <div class="max_guest">
+              <p>4 Guests</p>
+            </div>
+            <div class="number_rooms">
+              <p>2 Bedroom</p>
+            </div>
+            <div class="number_bathrooms">
+              <p>1 Bathroom</p>
+            </div>
+          </div>
+          <div class="user">
+            <strong>Owner:</strong> Adrienne
+          </div>
+          <div class="description">
+            <p>
+             This is a lovely 2 bedroom and 1 bathroom apartment
+              that can accommodate 4 people. It's located at the center
+              of Shanghai and next to the subway line 1.1 stop to People Square, 2 stops
+              to Bund, 3 stops to Jingan Temple.
+            </p>
+          </div>
+        </article>
+        <article>
+          <h2>A suite</h2>
+          <div class="price_by_night"><p>$99</p></div>
+          <div class="information">
+            <div class="max_guest">
+              <p>2 Guests</p>
+            </div>
+            <div class="number_rooms">
+              <p>1 Bedroom</p>
+            </div>
+            <div class="number_bathrooms">
+              <p>1 Bathroom</p>
+            </div>
+          </div>
+          <div class="user">
+            <strong>Owner:</strong> John Lennon
+          </div>
+          <div class="description">
+            <p>
+             This is a lovely 2 bedroom and 1 bathroom apartment
+              that can accommodate 2 people. It's located at the center
+              of Shanghai and next to the subway line 1.1 stop to People Square, 2 stops
+              to Bund, 3 stops to Jingan Temple.
+            </p>
+          </div>
+        </article>
+      </section>
+    </div>
+    <footer>Best School</footer>
+  </body>
+</html>
